--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -1,7 +1,11 @@
 doctype html
 html
   head
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     title 学做
+    link(href="/css/main.css", rel="stylesheet")
   body
     div(id='app')= content
     script(type='text/javascript', src='/js/bundle.js')
