--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -8,4 +8,6 @@ html
     link(href="/css/main.css", rel="stylesheet")
   body
     div(id='app')= content
+    script(type='text/javascript', src='/js/vendor.js')
+    script(type='text/javascript', src='/js/vendor.bundle.js')
     script(type='text/javascript', src='/js/bundle.js')
