--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -1,4 +1,15 @@
 extends ../layouts/main
 
 block content
-  | hello, world!
+  main
+    div.intro-left
+      p 学做网是一个面向大学生的实习平台，企业为了提前预约优秀学生，可以发布实习岗位；学生为了将来更好地工作，可以在上面寻找喜欢的实习岗位，一遍锻炼工作技能，一边学习专业知识
+    div.intro-right
+      p 如果你是企业，你可以：
+      ol
+        li 寻找优秀学生，并给他们提供实习机会
+        li 发布实习岗位
+      p 如果你是学生，你可以：
+      ol
+        li 查找并申请想要的实习岗位
+        li 提交个人信息，让企业找到你
