--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,7 +3,7 @@ html
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    title 学做
+    title= title
     link(href="/css/main.css", rel="stylesheet")
   body
     include ./_head.pug
