--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -12,13 +12,11 @@ block content
       p.row
         label(for='password') 密码：
         input(type='password', name='password', id='password' required)
-      fieldset.radios
-        legend 用户类型：
-        p.row
-          input(type='radio', id='user-type-student', name='user_type', value=0)
-          label(for='user-type-student') 学生
-        p.row
-          input(type='radio', id='user-type-company', name='user_type', value=1)
-          label(for='user-type-company') 公司
+      p.row
+        label 用户类型：
+        input(type='radio', id='user-type-student', name='user_type', value=0, checked)
+        label(for='user-type-student') 学生
+        input(type='radio', id='user-type-company', name='user_type', value=1)
+        label(for='user-type-company') 公司
       p.row
         input(type='submit', value='注册')
