--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -2,16 +2,20 @@ extends ../layouts/main
 
 block content
   div(class='form-wrapper')
-    form(method='post', action='/signup')
+    form(method='post', action='/signup', class='signup')
       p.row
         label(for='name') 用户名：
-        input(type='text', name='name', id='name' required)
+        input(type='text', name='name', id='name', required)
+        span(style={display: 'none'}, class='invalid')
       p.row
         label(for='email') 邮箱：
-        input(type='email', name='email', id='email' required)
+        input(type='email', name='email', id='email', required)
+        span(style={display: 'none'}, class='invalid')
       p.row
         label(for='password') 密码：
-        input(type='password', name='password', id='password' required)
+        input(type='password', name='password', id='password', required)
+        span(style={display: 'none'}, class='invalid')
+        div(class='form-hint') 至少8位且至少包含数字和字母
       p.row
         label 用户类型：
         input(type='radio', id='user-type-student', name='user_type', value=0, checked)
@@ -19,4 +23,5 @@ block content
         input(type='radio', id='user-type-company', name='user_type', value=1)
         label(for='user-type-company') 公司
       p.row
-        input(type='submit', value='注册')
+        input(type='submit', value='注册', formnovalidate)
+        span(style={display: 'none'}, class='invalid')
