--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -9,5 +9,5 @@ html
     include ./_head.pug
     block content
     include ./_foot.pug
-    script(src='js/vendor.js')
-    script(src='js/bundle.js')
+    script(src='/js/vendor.js')
+    script(src='/js/bundle.js')
