--- a/views/jobs/index.pug
+++ b/views/jobs/index.pug
@@ -9,7 +9,7 @@ block content
         th 操作
     tbody
       each job in jobs
-        tr(data-job_id=job.id)
+        tr(data-job-id=job.id)
           td= job.title
           td= job.duty
           td= job.requirement
