--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -7,7 +7,8 @@ html
     link(href="/css/main.css", rel="stylesheet")
   body
     include ./_head.pug
-    block content
+    main
+      block content
     include ./_foot.pug
     script(src='/js/vendor.js')
     script(src='/js/bundle.js')
