form validation init

--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -5,21 +5,17 @@ block content
       fieldset
         p
           label(for='name') 用户名：
-          input(type='text', name='name', id='name', required, autofocus)
-          span(style={display: 'none'}, class='invalid')
+          input(type='text', name='name', id='name', autofocus)
         p
           label(for='email') 邮箱：
-          input(type='email', name='email', id='email', required)
-          span(style={display: 'none'}, class='invalid')
+          input(type='email', name='email', id='email')
         p
           label(for='password') 密码：
-          input(type='password', name='password', id='password', required)
-          span(style={display: 'none'}, class='invalid')
+          input(type='password', name='password', id='password')
           div(class='form-hint') 至少8位且至少包含数字和字母
         p
           label(for='phone') 电话：
           input(type='text', name='phone', id='phone')
-          span(style={display: 'none'}, class='invalid')
         p
           label 用户类型：
           input(type='radio', id='user-type-student', name='user_type', value=0, checked)
@@ -29,13 +25,13 @@ block content
       fieldset.student
         p
           label(for='university') 就读院校：
-          input(type='text', name='university', id='university', required)
+          input(type='text', name='university', id='university')
         p
           label(for='major') 专业：
-          input(type='text', name='major', id='major', required)
+          input(type='text', name='major', id='major')
         p
           label(for='entryDate') 入学年份：
-          input(type='text', name='entryDate', id='entryDate', required)
+          input(type='text', name='entryDate', id='entryDate')
       fieldset.company(style={display: 'none'})
         p
           label(for='url') 公司网址：
@@ -45,4 +41,3 @@ block content
           textarea(name='desc', id='desc')
       p
         input(type='submit', value='注册')
-        span(style={display: 'none'}, class='invalid')
