--- a/views/user/loginView.pug
+++ b/views/user/loginView.pug
@@ -3,13 +3,11 @@ extends ../layouts/main
 block content
   div
     form(method='post', action='/login', class='login', autocomplete='off')
-      input(type='text', style={ display: 'none' })
-      input(type='password', style={ display: 'none' })
       p.row
-        label(for='name') 用户：
+        label(for='name') 用户名：
         input(type='text', name='name', id='name', placeholder='用户名/邮箱', autofocus)
       p.row
         label(for='password') 密码：
         input(type='password', name='password', id='password')
       p.row
-        input(type='submit', value='登陆', formnovalidate)
+        input(type='submit', value='登陆')
