--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -1,6 +1,6 @@
 extends ../layouts/main
 block content
-  div(class='form-wrapper')
+  div
     form(method='post', action='/signup', class='signup', autocomplete='off')
       fieldset
         p
