--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -18,9 +18,9 @@ block content
           input(type='text', name='phone', id='phone')
         p
           label 用户类型：
-          input(type='radio', id='user-type-student', name='user_type', value=0, checked)
+          input(type='radio', id='user-type-student', name='userType', value=0, checked)
           label(for='user-type-student') 学生
-          input(type='radio', id='user-type-company', name='user_type', value=1)
+          input(type='radio', id='user-type-company', name='userType', value=1)
           label(for='user-type-company') 公司
       fieldset.student
         p
