--- a/views/profile/index.pug
+++ b/views/profile/index.pug
@@ -5,7 +5,7 @@ block content
       li
         a(href='/profile/user_info' class={active: pos == 'user_info'}) 个人信息
       li
-        if pos == 'user_info'
+        if user.isStudent()
           a(href='/profile/jobs' class={active: pos == 'jobs'}) 申请的职位
         else
           a(href='/profile/jobs' class={active: pos == 'jobs'}) 发布的职位
