--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,5 +1,6 @@
 /* footer */
 footer {
+  font-size: 0.8rem;
   border-top: 1px solid #e8e8e8;
   bottom: 1%;
   color: #999;
@@ -7,6 +8,12 @@ footer {
   text-align: center;
   width: 100%;
   padding:10px 0;
+
+  .content {
+    max-width:1200px;
+    margin:0 auto;
+  }
+
   a {
     margin:0 10px;
   }
