--- a/views/layouts/_head.pug
+++ b/views/layouts/_head.pug
@@ -1,13 +1,11 @@
 header
   .content
-    p
-      a(href='/') 学做网
-    ul.user-info
+    a(href='/' class='logo') 学做网
+    span.user-nav
       - var cu = req.currentUser
       if cu
-        li 你好,
-          a(href='/profile') #{cu.name}
-        li: a(href='/logout') 退出
+        span 你好, #[a(href='/profile')= cu.name]
+        a(href='/logout') 退出
       else
-        li: a(href='login') 登陆
-        li: a(href='signup') 注册
+        a(href='login') 登陆
+        a(href='signup') 注册
