--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -4,10 +4,61 @@
  * 2. font
  * 3. button
  */
+
+$label-width: 120px;
+$label-margin: 15px;
+$text-width: 320px;
+
 * {
   box-sizing: border-box;
 }
 
+p {
+  margin: 0 0 0.8em;
+  padding: 0;
+}
+
 body {
   font-size: 100%;
+}
+
+/* form and controls */
+form {
+  padding: 20px;
+
+  fieldset {
+    margin: 0;
+    padding: 0;
+    border: none;
+    border-top: 1px solid #ccc;
+    padding-top: 20px;
+  }
+
+  .label {
+    display: inline-block;
+    width: 120px;
+    vertical-align: top;
+    text-align: right;
+    margin-right: 15px;
+  }
+
+  label.button-box {
+    margin-right: 12px;
+  }
+
+  .right-column {
+    margin-left: $label-width + $label-margin;
+  }
+
+  .hint {
+    font-size: 0.8px;
+    color: #ccc;
+  }
+
+  input[type=text],
+  input[type=email],
+  input[type=password],
+  textarea {
+    width: 320px;
+  }
 }
