--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -2,42 +2,43 @@ extends ../layouts/main
 block content
   div
     form(method='post', action='/signup', class='signup', autocomplete='off')
-      fieldset
-        p
-          label(for='name') 用户名：
-          input(type='text', name='name', id='name', autofocus)
-        p
-          label(for='email') 邮箱：
-          input(type='email', name='email', id='email')
-        p
-          label(for='password') 密码：
-          input(type='password', name='password', id='password')
-          div(class='form-hint') 至少8位且至少包含数字和字母
-        p
-          label(for='phone') 电话：
-          input(type='text', name='phone', id='phone')
-        p
-          label 用户类型：
+      p
+        label(for='name' class='label') 用户名：
+        input(type='text', name='name', id='name', autofocus)
+      p
+        label(for='email' class='label') 邮箱：
+        input(type='email', name='email', id='email')
+      p
+        label(for='password' class='label') 密码：
+        input(type='password', name='password', id='password')
+        div(class='hint' class='right-column') 至少8位且至少包含数字和字母
+      p
+        label(for='phone' class='label') 电话：
+        input(type='text', name='phone', id='phone')
+      p
+        span(class='label') 用户类型：
+        label(class='button-box')
           input(type='radio', id='user-type-student', name='userType', value=0, checked)
-          label(for='user-type-student') 学生
+          | 学生
+        label(class='button-box')
           input(type='radio', id='user-type-company', name='userType', value=1)
-          label(for='user-type-company') 公司
+          | 公司
       fieldset.student
         p
-          label(for='university') 就读院校：
+          label(for='university' class='label') 就读院校：
           input(type='text', name='university', id='university')
         p
-          label(for='major') 专业：
+          label(for='major' class='label') 专业：
           input(type='text', name='major', id='major')
         p
-          label(for='entryDate') 入学年份：
+          label(for='entryDate' class='label') 入学年份：
           input(type='text', name='entryDate', id='entryDate')
       fieldset.company(style={display: 'none'})
         p
-          label(for='url') 公司网址：
+          label(for='url' class='label') 公司网址：
           input(type='text', name='url', id='url')
         p
-          label(for='desc') 公司介绍：
+          label(for='desc' class='label') 公司介绍：
           textarea(name='desc', id='desc')
       p
-        input(type='submit', value='注册')
+        input(type='submit', value='注册' class='right-column')
