--- a/views/jobs/index.pug
+++ b/views/jobs/index.pug
@@ -1,8 +1,8 @@
 extends ../layouts/main
 block content
-  table
+  table.jobs
     thead
-      tr
+      tr(class='header')
         th 职位名称
         th 工作地点
         th 薪资(元/月)
