--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -30,7 +30,7 @@ form {
     margin: 0;
     padding: 0;
     border: none;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #8e8e8e;
     padding-top: 20px;
   }
 
@@ -60,5 +60,49 @@ form {
   input[type=password],
   textarea {
     width: 320px;
+  }
+}
+
+/* tables */
+table {
+  border-collapse: collapse;
+  tr:nth-of-type(even) {
+    background-color: #ccc;
+  }
+
+  tr.header {
+    background-color: #bbb;
+  }
+
+  th,td {
+    border: 1px solid #aaa;
+    padding: 6px 12px;
+  }
+}
+
+table.jobs {
+  margin-top: 12px auto 0 auto;
+}
+
+/* list */
+ul.nav {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+  margin-top: 0;
+  a {
+    display: block;
+    height: 2;
+    line-height: 2;
+    border-top: none;
+    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-left: 3px solid #000;
+    border-bottom: 1px solid #ccc;
+    padding-left: 8px;
+  }
+
+  li:first-child a {
+    border-top: 1px solid #ccc;
   }
 }
