--- a/views/user/loginView.pug
+++ b/views/user/loginView.pug
@@ -4,10 +4,10 @@ block content
   div
     form(method='post', action='/login', class='login', autocomplete='off')
       p
-        label(for='name') 用户名：
+        label(for='name' class='label') 用户名：
         input(type='text', name='name', id='name', placeholder='用户名/邮箱', autofocus)
       p
-        label(for='password') 密码：
+        label(for='password' class='label') 密码：
         input(type='password', name='password', id='password')
       p
-        input(type='submit', value='登陆')
+        input(type='submit', value='登陆' class='right-column')
