--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -1,5 +1,25 @@
 @import 'main';
 
-.index-container > div {
-  flex: 1;
+.index-container {
+  margin-top: 20px;
+  border-bottom: 1px solid #eee;
+
+  .index-signup {
+    flex: 1 1 400px;
+    padding-right: 40px;
+  }
+
+  .slogan {
+    flex: 2 1 800px;
+    padding-left: 40px;
+    text-align: center;
+  }
+}
+
+.index-middle {
+  margin-top: 20px;
+  text-align: center;
+  & > div {
+    flex: 1;
+  }
 }
